<?xml version="1.0"?>
<package>
  <name>audible_diagnostics</name>
  <version>1.0.0</version>
  <description>The audible_diagnostics package</description>

  <maintainer email="vinayrao@usc.edu">vinayrao</maintainer>

  <license>TODO</license>

  <author email="vinayrao@usc.edu">Vinay Rao</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sound_play</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>sound_play</run_depend>

</package>
